copyright changed to copyright 2016
copyright changed to copyright 2016

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </section>
   <footer>
 			<div class="panel-footer panel-styled">
-				Copyright &copy; <img alt="Brand ZDesign" src="img/ZDesign-Logo-White-FINAL.svg" onerror="this.src='img/ZDesign-Logo-White-FINAL.png'"/> / All rights reserved 
+				Copyright &copy; <img alt="Brand ZDesign" src="img/ZDesign-Logo-White-FINAL.svg" onerror="this.src='img/ZDesign-Logo-White-FINAL.png'"/> 2016/ All rights reserved 
 			</div>
 		</footer>
 </body>
